Updated with version: 4.34.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -202,7 +202,7 @@
     "description": "section title on hidding wizard, shown when advance user option enabled"
   },
   "confirm_msg": {
-    "message": "Confirm that the Type and ID of this item looks correct:",
+    "message": "Confirm that the attributes of this element look correct:",
     "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
@@ -461,6 +461,10 @@
   },
   "filterannoyances": {
     "message": "Fanboy's Annoyances (blocks in-page pop-ups, social media and related widgets, and other annoyances)",
+    "description": "A filter list"
+  },
+  "filterfb_notifications": {
+    "message": "Fanboy's Notifications (blocks in-page pop-ups, social media and related widgets, and other annoyances)",
     "description": "A filter list"
   },
   "filterwarning_removal": {
